# bin2

./: CMakeLists.txt  default.nix  flake.nix  shell.nix
bench/: bench-bin2-arm.c  cumsum-in-vs-out-of-place-neon.c
doc/: devlog.md
src/: bin2.avx2.naive.c  bin2.avx2.v2.c  bin2.neon.naive.c  bin2.neon.v2.c  bin2.neon.v3.c  bin2.plain.c
test/: test.c
